Add test for targeted emails

--- a/src/app/features/admin/emails/targeted-emails/targeted-emails.component.html
+++ b/src/app/features/admin/emails/targeted-emails/targeted-emails.component.html
@@ -3,7 +3,7 @@
     <p class="asc-summary-box govuk-!-margin-bottom-12">
       <span>Number of users to email:</span>
       <br />
-      <strong class="govuk-!-font-size-36">
+      <strong class="govuk-!-font-size-36" data-testid="totalEmails">
         {{ totalEmails | number }}
       </strong>
     </p>
