Change Up-to-date to OK

--- a/src/app/shared/components/training-and-qualifications-categories/training-and-qualifications-categories.component.html
+++ b/src/app/shared/components/training-and-qualifications-categories/training-and-qualifications-categories.component.html
@@ -113,7 +113,7 @@
                 <ng-template ngPluralCase="other">expire soon</ng-template>
               </ng-container>
             </div>
-            <div *ngIf="trainingIsComplete(trainingCategory.training)">Up-to-date</div>
+            <div *ngIf="trainingIsComplete(trainingCategory.training)">OK</div>
           </td>
           <td class="govuk-table__cell govuk-!-font-weight-regular">
             <a
