--- a/src/app/features/admin/emails/targeted-emails/targeted-emails.component.html
+++ b/src/app/features/admin/emails/targeted-emails/targeted-emails.component.html
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-third">
-    <p class="asc-summary-box govuk-!-margin-bottom-12">
+    <p class="asc-summary-box govuk-!-margin-bottom-12" data-testid="numberOfUsersToEmail">
       <span>Number of users to email:</span>
       <br />
       <strong class="govuk-!-font-size-36" data-testid="totalEmails">
