Add routing for inactive emails

--- a/src/app/features/admin/emails/emails.component.html
+++ b/src/app/features/admin/emails/emails.component.html
@@ -5,7 +5,7 @@
   <div class="govuk-grid-column-one-half">
     <ul class="govuk-list">
       <li routerLinkActive="active" data-testid="inactiveWorkplacesLink">
-        <a routerLink="/sfcadmin/emails" class="govuk-link" data-testid="inactiveWorkplacesLinkAnchor">
+        <a routerLink="/sfcadmin/emails/inactive-emails" class="govuk-link" data-testid="inactiveWorkplacesLinkAnchor">
           Inactive workplaces
         </a>
       </li>
