--- a/src/app/features/admin/parent-requests/parent-requests-list.component.html
+++ b/src/app/features/admin/parent-requests/parent-requests-list.component.html
@@ -1,1 +1,5 @@
-<p>hello</p>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-5">
+    <h2 class="govuk-heading-m">Parent requests</h2>
+  </div>
+</div>
