Create approvals-table component
Co-authored-by: popey2700 <popey2700@users.noreply.github.com>

--- a/src/app/features/admin/parent-requests/parent-requests-list.component.html
+++ b/src/app/features/admin/parent-requests/parent-requests-list.component.html
@@ -2,4 +2,5 @@
   <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-5">
     <h2 class="govuk-heading-m">Parent requests</h2>
   </div>
+  <app-approvals-table [pendingApprovals]="[]"></app-approvals-table>
 </div>
