Add refactoring to  the inactive workplaces component

--- a/src/app/features/admin/emails/inactive-emails/inactive-emails.component.html
+++ b/src/app/features/admin/emails/inactive-emails/inactive-emails.component.html
@@ -20,7 +20,7 @@
       <button
         class="govuk-button govuk-!-margin-right-9"
         [disabled]="!inactiveWorkplaces"
-        (click)="confirmSendEmails($event, inactiveWorkplaces, emailType.InactiveWorkplaces)"
+        (click)="confirmSendEmails($event, inactiveWorkplaces)"
         type="submit"
       >
         Send
