--- a/src/app/features/admin/components/approvals-table/approvals-table.component.html
+++ b/src/app/features/admin/components/approvals-table/approvals-table.component.html
@@ -7,24 +7,24 @@
         <th scope="col" class="govuk-table__header">Status</th>
       </tr>
     </thead>
-    <!-- <tbody class="govuk-table__body">
-      <tr class="govuk-table__row" *ngFor="let cqcServiceChange of pendingCQCMainServiceChanges">
+    <tbody class="govuk-table__body">
+      <tr class="govuk-table__row" *ngFor="let individualRequest of pendingApprovals">
         <td class="govuk-table__cell">
           <a
-            [attr.data-testid]="'workplaceName-' + cqcServiceChange.establishmentUid"
-            [routerLink]="['/sfcadmin/cqc-main-service-change', cqcServiceChange.establishmentUid]"
-            >{{ cqcServiceChange.orgName }}</a
+            [attr.data-testid]="'workplaceName-' + individualRequest.establishmentUid"
+            [routerLink]="['/sfcadmin', routerLinkUrl, individualRequest.establishmentUid]"
+            >{{ individualRequest.orgName }}</a
           >
         </td>
         <td class="govuk-table__cell">
-          {{ cqcServiceChange.requested | date: 'dd MMM yyyy' }}
+          {{ individualRequest.requested | date: 'dd MMM yyyy' }}
         </td>
         <td class="govuk-table__cell">
-          <strong class="govuk-tag" [ngClass]="setStatusClass(cqcServiceChange.status)">
-            {{ cqcServiceChange.status | uppercase }}
+          <strong class="govuk-tag" [ngClass]="setStatusClass(individualRequest.status)">
+            {{ individualRequest.status | uppercase }}
           </strong>
         </td>
       </tr>
-    </tbody> -->
+    </tbody>
   </table>
 </div>
