Add bread crumb for paret individual request

--- a/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
+++ b/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
@@ -1,1 +1,8 @@
-<h2 class="govuk-heading-l">Parent Request:</h2>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-three-quarters">
+    <h2 class="govuk-heading-l">
+      Parent request:
+      <!-- {{ registration.establishment.name }} -->
+    </h2>
+  </div>
+</div>
