--- a/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
+++ b/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
@@ -1,8 +1,31 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h2 class="govuk-heading-l">
-      Parent request:
-      <!-- {{ registration.establishment.name }} -->
-    </h2>
+    <h2 class="govuk-heading-l">Parent request:</h2>
+    <p>Receveived</p>
+    <app-review-checkbox
+      [registration]="registration"
+      [userFullName]="userFullName"
+      [checkBoxError]="checkBoxError"
+    ></app-review-checkbox>
+    <h2 class="govuk-heading-m">Workplace details</h2>
+    <dl class="govuk-summary-list">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">Workplace ID</dt>
+        <dl class="govuk-summary-list__value"></dl>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">Name and address</dt>
+        <dl class="govuk-summary-list__value"></dl>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">Username</dt>
+        <dl class="govuk-summary-list__value"></dl>
+      </div>
+    </dl>
+    <div class="govuk-frid-column-three-quarters">
+      <div class="govuk-button-group">
+        <a [routerLink]="['/']" class="govuk-!-margin-left-9 govuk-list">Exit</a>
+      </div>
+    </div>
   </div>
 </div>
