change new component to use existing page resolver, add cms content to component

--- a/src/app/features/benefits-bundle/benefits-training-discounts/benefits-training-discounts.component.html
+++ b/src/app/features/benefits-bundle/benefits-training-discounts/benefits-training-discounts.component.html
@@ -18,5 +18,6 @@
         on the Skills for Care website.
       </p>
     </app-details>
+    <div class="asc-cms-content" [innerHTML]="benefitsTrainingDiscounts.content"></div>
   </div>
 </div>
