--- a/src/app/features/benefits-bundle/benefits-training-discounts/benefits-training-discounts.component.html
+++ b/src/app/features/benefits-bundle/benefits-training-discounts/benefits-training-discounts.component.html
@@ -18,6 +18,6 @@
         on the Skills for Care website.
       </p>
     </app-details>
-    <div class="asc-cms-content" [innerHTML]="benefitsTrainingDiscounts.content"></div>
+    <div class="asc-cms-content" [innerHTML]="pages.content"></div>
   </div>
 </div>
