Added Endorsed providers link

--- a/src/app/features/benefits-bundle/benefits-bundle.component.html
+++ b/src/app/features/benefits-bundle/benefits-bundle.component.html
@@ -27,12 +27,24 @@
 
       <app-benefit-accordion [benefit]="benefits[0]" [index]="0" (toggleEmitter)="toggleAccordion(0)">
         <p>
+          We've negotiated some great discounts from endorsed providers who offer high quality learning and development
+          to the social care sector.
+        </p>
+        <p>
+          <a href="/benefits-bundle/training-discounts"
+            >View discounts from Skills for Care's endorsed training providers</a
+          >
+        </p>
+      </app-benefit-accordion>
+
+      <app-benefit-accordion [benefit]="benefits[1]" [index]="1" (toggleEmitter)="toggleAccordion(1)">
+        <p>
           <a href="https://bookshop.skillsforcare.org.uk/Shop" target="_blank">Visit the Skills for Care bookshop</a>
           and use voucher code <strong>ASCWDS-2122</strong> to claim your discount.
         </p>
       </app-benefit-accordion>
 
-      <app-benefit-accordion [benefit]="benefits[1]" [index]="1" (toggleEmitter)="toggleAccordion(1)">
+      <app-benefit-accordion [benefit]="benefits[2]" [index]="2" (toggleEmitter)="toggleAccordion(2)">
         <p>
           These seminars teach a specific, values-based interviewing style that helps identify candidates who fit with
           your organisation's values, culture and expectations.
@@ -53,7 +65,7 @@
         </p>
       </app-benefit-accordion>
 
-      <app-benefit-accordion [benefit]="benefits[2]" [index]="2" (toggleEmitter)="toggleAccordion(2)">
+      <app-benefit-accordion [benefit]="benefits[3]" [index]="3" (toggleEmitter)="toggleAccordion(3)">
         <p>
           These seminars introduce a values-based methodology that allows you to communicate effectively with staff,
           helping them to feel supported and empowered.
@@ -75,7 +87,7 @@
         </p>
       </app-benefit-accordion>
 
-      <app-benefit-accordion [benefit]="benefits[3]" [index]="3" (toggleEmitter)="toggleAccordion(3)">
+      <app-benefit-accordion [benefit]="benefits[4]" [index]="4" (toggleEmitter)="toggleAccordion(4)">
         <p>Coming soon.</p>
 
         <p>
@@ -88,7 +100,7 @@
         </p>
       </app-benefit-accordion>
 
-      <app-benefit-accordion [benefit]="benefits[4]" [index]="4" (toggleEmitter)="toggleAccordion(4)">
+      <app-benefit-accordion [benefit]="benefits[5]" [index]="5" (toggleEmitter)="toggleAccordion(5)">
         <p>
           These modules, based on the Manager Induction Standards, help frontline leaders and managers develop their
           knowledge and skills in leadership, succession planning and future talent development.
@@ -109,7 +121,7 @@
         </p>
       </app-benefit-accordion>
 
-      <app-benefit-accordion [benefit]="benefits[5]" [index]="5" (toggleEmitter)="toggleAccordion(5)">
+      <app-benefit-accordion [benefit]="benefits[6]" [index]="6" (toggleEmitter)="toggleAccordion(6)">
         <p>
           This free training comes as 3 individual packages for your staff. There's a rapid induction programme,
           refresher training and a volunteer programme.
@@ -123,7 +135,7 @@
         </p>
       </app-benefit-accordion>
 
-      <app-benefit-accordion [benefit]="benefits[6]" [index]="6" (toggleEmitter)="toggleAccordion(6)">
+      <app-benefit-accordion [benefit]="benefits[7]" [index]="7" (toggleEmitter)="toggleAccordion(7)">
         <p>
           <a
             href="https://www.skillsforcare.org.uk/Documents/Standards-legislation/CQC/Recommendations-for-CQC-providers.pdf"
