--- a/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
+++ b/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
@@ -1,25 +1,50 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h2 class="govuk-heading-l">Parent request:</h2>
-    <p>Receveived</p>
-    <app-review-checkbox
-      [registration]="registration"
-      [userFullName]="userFullName"
-      [checkBoxError]="checkBoxError"
-    ></app-review-checkbox>
+    <h2 class="govuk-heading-l">Parent request: {{ parentIndividtualRequest.establishment.name }}</h2>
+    <p>
+      Receveived {{ parentIndividtualRequest.createdAt | date: 'dd MMM yyyy' }},
+      {{ parentIndividtualRequest.createdAt | date: 'hh:mma' | lowercase }}
+    </p>
+    <app-review-checkbox [userFullName]="userFullName" [checkBoxError]="checkBoxError"></app-review-checkbox>
     <h2 class="govuk-heading-m">Workplace details</h2>
-    <dl class="govuk-summary-list">
+    <dl class="govuk-summary-list asc-summarylist-border-top">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Workplace ID</dt>
-        <dl class="govuk-summary-list__value"></dl>
+        <dd class="govuk-summary-list__value">
+          <a
+            href="#"
+            (click)="
+              navigateToWorkplace(
+                parentIndividtualRequest.establishment.establishmentUid,
+                '',
+                parentIndividtualRequest.establishment.workplaceId,
+                $event
+              )
+            "
+          >
+            {{ parentIndividtualRequest.establishment.workplaceId }}
+          </a>
+        </dd>
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Name and address</dt>
-        <dl class="govuk-summary-list__value"></dl>
+        <dd class="govuk-summary-list__value">
+          {{ parentIndividtualRequest.establishment.name }}
+          {{ parentIndividtualRequest.establishment.address
+          }}<br *ngIf="parentIndividtualRequest.establishment.address2" />
+          {{ parentIndividtualRequest.establishment.address2
+          }}<br *ngIf="parentIndividtualRequest.establishment.address3" />
+          {{ parentIndividtualRequest.establishment.address3 }}<br />
+          {{ parentIndividtualRequest.establishment.county }}<br />
+          {{ parentIndividtualRequest.establishment.town }}<br />
+          {{ parentIndividtualRequest.establishment.postcode }}
+        </dd>
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Username</dt>
-        <dl class="govuk-summary-list__value"></dl>
+        <dd class="govuk-summary-list__value">
+          {{ parentIndividtualRequest.username }}
+        </dd>
       </div>
     </dl>
     <div class="govuk-frid-column-three-quarters">
