--- a/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
+++ b/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
@@ -1,11 +1,10 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h2 class="govuk-heading-l">Parent request: {{ parentIndividtualRequest.establishment.name }}</h2>
+    <h2 class="govuk-heading-l">Parent request: {{ registration.establishment.name }}</h2>
     <p>
-      Receveived {{ parentIndividtualRequest.createdAt | date: 'dd MMM yyyy' }},
-      {{ parentIndividtualRequest.createdAt | date: 'hh:mma' | lowercase }}
+      Receveived {{ registration.createdAt | date: 'dd MMM yyyy' }},
+      {{ registration.createdAt | date: 'hh:mma' | lowercase }}
     </p>
-    <app-review-checkbox [userFullName]="userFullName" [checkBoxError]="checkBoxError"></app-review-checkbox>
     <h2 class="govuk-heading-m">Workplace details</h2>
     <dl class="govuk-summary-list asc-summarylist-border-top">
       <div class="govuk-summary-list__row">
@@ -15,38 +14,45 @@
             href="#"
             (click)="
               navigateToWorkplace(
-                parentIndividtualRequest.establishment.establishmentUid,
+                registration.establishment.establishmentUid,
                 '',
-                parentIndividtualRequest.establishment.workplaceId,
+                registration.establishment.workplaceId,
                 $event
               )
             "
           >
-            {{ parentIndividtualRequest.establishment.workplaceId }}
+            {{ registration.establishment.workplaceId }}
           </a>
         </dd>
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Name and address</dt>
         <dd class="govuk-summary-list__value">
-          {{ parentIndividtualRequest.establishment.name }}
-          {{ parentIndividtualRequest.establishment.address
-          }}<br *ngIf="parentIndividtualRequest.establishment.address2" />
-          {{ parentIndividtualRequest.establishment.address2
-          }}<br *ngIf="parentIndividtualRequest.establishment.address3" />
-          {{ parentIndividtualRequest.establishment.address3 }}<br />
-          {{ parentIndividtualRequest.establishment.county }}<br />
-          {{ parentIndividtualRequest.establishment.town }}<br />
-          {{ parentIndividtualRequest.establishment.postcode }}
+          {{ registration.establishment.name }}
+          {{ registration.establishment.address }}<br *ngIf="registration.establishment.address2" />
+          {{ registration.establishment.address2 }}<br *ngIf="registration.establishment.address3" />
+          {{ registration.establishment.address3 }}<br />
+          {{ registration.establishment.county }}<br />
+          {{ registration.establishment.town }}<br />
+          {{ registration.establishment.postcode }}
         </dd>
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Username</dt>
         <dd class="govuk-summary-list__value">
-          {{ parentIndividtualRequest.username }}
+          {{ registration.username }}
         </dd>
       </div>
     </dl>
+    <app-add-note
+      [addNote]="addNote"
+      [registration]="registration"
+      [notes]="notes"
+      [getNotes]="getNotes"
+      [notesError]="notesError"
+      [notesForm]="notesForm"
+      [loggedInUser]="loggedInUser"
+    ></app-add-note>
     <div class="govuk-frid-column-three-quarters">
       <div class="govuk-button-group">
         <a [routerLink]="['/']" class="govuk-!-margin-left-9 govuk-list">Exit</a>
