Add exit button

--- a/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
+++ b/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
@@ -60,9 +60,9 @@
       [notesForm]="notesForm"
       [loggedInUser]="loggedInUser"
     ></app-add-note>
-    <div class="govuk-frid-column-three-quarters">
+    <div class="govuk-grid-column-three-quarters">
       <div class="govuk-button-group">
-        <a [routerLink]="['/']" class="govuk-!-margin-left-9 govuk-list">Exit</a>
+        <a [routerLink]="['/sfcadmin', 'parent-requests']" class="govuk-!-margin-left-9 govuk-list">Exit</a>
       </div>
     </div>
   </div>
