change search establishments call to return subsidiaries, add conditional to new remove parent link in workplace dropdown component

--- a/src/app/features/admin/search/workplace-dropdown/workplace-dropdown.component.html
+++ b/src/app/features/admin/search/workplace-dropdown/workplace-dropdown.component.html
@@ -31,7 +31,7 @@
       </tr>
     </tbody>
   </table>
-  <div *ngIf="item.isParent">
+  <div *ngIf="item.isParent && item.subsidiaries.length === 0">
     <a href="#" (click)="removeParent(item.uid, $event)">Remove parent status</a>
   </div>
 </div>
