Add mock file and test for parent request content and checkbox

--- a/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
+++ b/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
@@ -35,8 +35,8 @@
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">Name and address</dt>
         <dd class="govuk-summary-list__value">
-          {{ registration.establishment.name }}
-          {{ registration.establishment.address }}<br *ngIf="registration.establishment.address2" />
+          {{ registration.establishment.name }}<br />
+          {{ registration.establishment.address1 }}<br *ngIf="registration.establishment.address2" />
           {{ registration.establishment.address2 }}<br *ngIf="registration.establishment.address3" />
           {{ registration.establishment.address3 }}<br />
           {{ registration.establishment.county }}<br />
