Added approval and rejection alerts Added appropriate tests
Co-authored-by: Joanna Fawl <joannafawl@users.noreply.github.com>

--- a/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
+++ b/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
@@ -79,6 +79,10 @@
         </button>
         <a [routerLink]="['/sfcadmin', 'parent-requests']" class="govuk-!-margin-left-9 govuk-list">Exit</a>
       </div>
+      <span *ngIf="approvalOrRejectionServerError" class="govuk-error-message">
+        <span class="govuk-visually-hidden">Error:</span>
+        {{ approvalOrRejectionServerError }}
+      </span>
     </div>
   </div>
 </div>
