Remove feature flag from training and qualification

--- a/src/app/shared/directives/add-edit-training/add-edit-training.component.html
+++ b/src/app/shared/directives/add-edit-training/add-edit-training.component.html
@@ -145,7 +145,7 @@
       {{ buttonText }}
     </button>
     <button
-      *ngIf="trainingRecordId && newTrainingAndQualificationsRecordsFlag"
+      *ngIf="trainingRecordId"
       type="button"
       class="govuk-button govuk-button--warning govuk-!-margin-right-8"
       [routerLink]="['../delete']"
