Fixed padding issue
Co-authored-by: Joanna Fawl <joannafawl@users.noreply.github.com>

--- a/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
+++ b/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
@@ -60,7 +60,7 @@
       [notesForm]="notesForm"
       [loggedInUser]="loggedInUser"
     ></app-add-note>
-    <div class="govuk-grid-column-three-quarters">
+    <div class="govuk-grid-column-three-quarters govuk-!-padding-left-0">
       <div class="govuk-button-group">
         <button
           class="govuk-button govuk-!-padding-left-6 govuk-!-padding-right-6"
