--- a/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
+++ b/src/app/features/admin/parent-requests/parent-request-individual/parent-request-individual.component.html
@@ -45,7 +45,7 @@
         </dd>
       </div>
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">Username</dt>
+        <dt class="govuk-summary-list__key">Name</dt>
         <dd class="govuk-summary-list__value">
           {{ registration.username }}
         </dd>
